--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "icons:fetch": "node scripts/fetchIcons.js",
+    "icons:convert": "node scripts/convertIcons.js",
+    "icons:atlas": "node scripts/generateAtlas.js",
+    "icons:build": "npm run icons:fetch && npm run icons:convert && npm run icons:atlas",
+    "prebuild": "npm run icons:build"
   },
   "dependencies": {
     "@chakra-ui/react": "^3.28.0",
@@ -36,6 +41,8 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
+    "sharp": "^0.34.4",
+    "spritesmith": "^3.5.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
